--- a/src/uart/package.xml
+++ b/src/uart/package.xml
@@ -1,20 +1,15 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>all_launch</name>
+  <name>uart</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="k@todo.todo">k</maintainer>
   <license>Apache-2.0</license>
 
-  <exec_depend>launch</exec_depend>
-  <exec_depend>launch_ros</exec_depend>
-
-  <!-- START添加所有需要的launch文件的依赖 -->
-  <exec_depend>ament_index_python</exec_depend>
-  <exec_depend>audio</exec_depend>
-  <exec_depend>uart</exec_depend>
-  <!-- END添加所有需要的launch文件的依赖 -->
+  <depend>rclpy</depend>
+  <depend>launch</depend>
+  <depend>launch_ros</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
