--- a/src/uart/package.xml
+++ b/src/uart/package.xml
@@ -11,6 +11,11 @@
   <depend>launch</depend>
   <depend>launch_ros</depend>
 
+  <!-- START添加依赖库 -->
+  <depend>python3-serial</depend>
+
+
+  <!-- END添加依赖库 -->
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
