--- a/src/all_launch/package.xml
+++ b/src/all_launch/package.xml
@@ -12,7 +12,7 @@
 
   <!-- START添加所有需要的launch文件的依赖 -->
   <exec_depend>ament_index_python</exec_depend>
-  <exec_depend>audio</exec_depend>
+  <exec_depend>audio_asr</exec_depend>
   <exec_depend>uart</exec_depend>
   <!-- END添加所有需要的launch文件的依赖 -->
 
