--- a/src/audio_asr/package.xml
+++ b/src/audio_asr/package.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>audio</name>
+  <name>audio_asr</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Streaming ASR node using sherpa-onnx with RKNN provider</description>
   <maintainer email="k@todo.todo">k</maintainer>
   <license>Apache-2.0</license>
 
   <depend>rclpy</depend>
   <depend>launch</depend>
   <depend>launch_ros</depend>
+  <exec_depend>sherpa-onnx</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
@@ -20,3 +21,4 @@
     <build_type>ament_python</build_type>
   </export>
 </package>
+
