rkllm功能包支持opencv库调用摄像头获取图像

--- a/src/audio_rkllm/CMakeLists.txt
+++ b/src/audio_rkllm/CMakeLists.txt
@@ -16,9 +16,10 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
+find_package(OpenCV REQUIRED)
 
 # 5.新增：包含 src 目录以支持同目录下的头文件（必选）
-include_directories(include src)
+include_directories(include src ${OpenCV_INCLUDE_DIRS})
 
 # 6.新增：创建可执行文件：将 .h 文件也加入源文件列表（必选）
 add_executable(audio_rkllm_node
@@ -30,6 +31,7 @@ add_executable(audio_rkllm_node
 set(RKLLM_LIB_PATH /lib/librkllmrt.so)
 target_link_libraries(audio_rkllm_node
   ${RKLLM_LIB_PATH}
+  ${OpenCV_LIBS}
 )
 
 # 8.新增：链接依赖库（必选）
