--- a/src/audio_rkllm/package.xml
+++ b/src/audio_rkllm/package.xml
@@ -16,6 +16,8 @@
   <depend>ament_lint_auto</depend>
   <depend>ament_lint_common</depend>
 
+   <depend>opencv2</depend> <!-- 新增 OpenCV 依赖 -->
+
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
