tts功能包测试完成

--- a/src/audio_tts/package.xml
+++ b/src/audio_tts/package.xml
@@ -3,7 +3,7 @@
 <package format="3">
   <name>audio_tts</name>
   <version>0.0.0</version>
-  <description>Streaming TTS node using sherpa-onnx with RKNN provider</description>
+  <description>Streaming TTS node using Baidu WebSocket API</description>
   <maintainer email="k@todo.todo">k</maintainer>
   <license>Apache-2.0</license>
 
@@ -11,6 +11,8 @@
   <depend>std_msgs</depend>
   <depend>launch</depend>
   <depend>launch_ros</depend>
+  <exec_depend>python3-aiohttp</exec_depend>
+  <exec_depend>python3-websockets</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
