feat(uart): 添加电机控制和状态接口 实现电机控制指令的下行传输和状态反馈的上行解析；添加pid_debug_interfaces包定义消息类型；更新uart节点以支持电机相关话题

--- a/src/uart/package.xml
+++ b/src/uart/package.xml
@@ -13,9 +13,10 @@
 
   <!-- START添加依赖库 -->
   <depend>python3-serial</depend>
-
-
+  <depend>pid_debug_interfaces</depend>
   <!-- END添加依赖库 -->
+
+  
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
