feat(butter_robot): 添加黄油机器人URDF模型及启动文件；all_launch中并添加foxglove_bridge支持

--- a/src/all_launch/package.xml
+++ b/src/all_launch/package.xml
@@ -16,6 +16,7 @@
   <exec_depend>audio_asr</exec_depend>
   <exec_depend>audio_rkllm</exec_depend>
   <exec_depend>audio_tts</exec_depend>
+  <exec_depend>butter_robot_description</exec_depend>
   <!-- END添加所有需要的launch文件的依赖 -->
 
   <test_depend>ament_copyright</test_depend>
